<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="android.view.View" />

        <variable
            name="vm"
            type="com.hhi.tripproject.viewmodel.SignUpViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/main_green"
        android:orientation="vertical"
        tools:context=".view.SignUpActivity">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/sign_back"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginStart="12dp"
                android:layout_marginTop="12dp"
                android:src="@drawable/ic_back_img" />

            <TextView
                android:id="@+id/sign_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/signup"
                android:textColor="@color/white"
                android:textSize="30sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <EditText
                android:id="@+id/sign_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:layout_marginBottom="20dp"
                android:backgroundTint="@color/white"
                android:hint="@string/id_hint"
                android:inputType="text"
                android:text="@={vm.id}"
                android:textColorHint="@color/white"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/sign_pw"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:layout_marginBottom="20dp"
                android:backgroundTint="@color/white"
                android:hint="@string/pw_hint"
                android:inputType="textPassword"
                android:text="@={vm.pw}"
                android:textColorHint="@color/white"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/sign_pw_confirm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:backgroundTint="@color/white"
                android:hint="@string/pw_confirm"
                android:inputType="textPassword"
                android:text="@={vm.pwCheck}"
                android:textColorHint="@color/white"
                android:textSize="18sp" />

        </LinearLayout>

        <TextView
            android:id="@+id/sign_create_btn"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@drawable/button_round"
            android:gravity="center"
            android:onClick="@{()->vm.signUp()}"
            android:text="@string/signup"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:visibility="@{vm.pw.equals(vm.pwCheck)?View.VISIBLE:View.GONE}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>